# salvo-vite-test

./: .env  Cargo.toml  Dockerfile  compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
migration/src/models/: users.rs
src/: configs.rs  consumers.rs  main.rs  modules.rs
src/configs/: db.rs  kafka.rs
src/dto/: mod.rs
src/modules/: auth.rs
