[package]
name = "salvo-vite-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive", "env"] }
dotenv = "0.15.0"
salvo = "0.88.1"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock", "schema-sync", "with-chrono", "with-json", "with-rust_decimal", "with-uuid", "with-ipnetwork" ] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
