[package]
edition      = "2024"
name         = "migration"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
bcrypt = "0.18.0"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock", "schema-sync", "with-chrono", "with-json", "with-rust_decimal", "with-uuid", "with-ipnetwork" ] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["v7"] }

[dependencies.sea-orm-migration]
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    # "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
version = "~2.0.0-rc"
